--- a/index.html
+++ b/index.html
@@ -6,125 +6,196 @@
 <title>ถึงที่รักของเขา 💖</title>
 
 <style>
-body {
-  margin: 0;
-  height: 100vh;
-  background: linear-gradient(135deg,#ffe6ee,#ffd1e3);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Segoe UI', sans-serif;
-  overflow: hidden;
+*{box-sizing:border-box}
+body{
+  margin:0;
+  height:100vh;
+  background:linear-gradient(135deg,#ffe6f0,#ffd6e8);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-family:'Segoe UI',sans-serif;
+  overflow:hidden;
+  transition:background 1.5s;
 }
-
-.card {
-  background: white;
-  width: 90%;
-  max-width: 380px;
-  padding: 24px;
-  border-radius: 30px;
-  text-align: center;
-  box-shadow: 0 20px 40px rgba(0,0,0,.15);
+.card{
+  background:white;
+  width:94%;
+  max-width:420px;
+  padding:28px;
+  border-radius:34px;
+  text-align:center;
+  box-shadow:0 30px 60px rgba(0,0,0,.2);
 }
-
-img {
-  width: 80%;
-  border-radius: 20px;
-  margin-bottom: 16px;
+img{
+  width:88%;
+  border-radius:26px;
+  margin-bottom:18px;
 }
-
-.text {
-  font-size: 1.25rem;
-  color: #ff5f8f;
-  min-height: 100px;
-  line-height: 1.7;
+.text{
+  font-size:1.22rem;
+  color:#ff4f86;
+  line-height:1.8;
+  min-height:160px;
 }
-
-button {
-  margin-top: 16px;
-  padding: 12px 26px;
-  border-radius: 18px;
-  border: none;
-  background: #ff7aa2;
-  color: white;
-  font-size: 1rem;
+.wait{
+  opacity:.5;
+  font-size:.95rem;
 }
-
-.heart {
-  position: fixed;
-  bottom: -20px;
-  font-size: 22px;
-  animation: floatUp 3.5s linear forwards;
+button{
+  margin-top:18px;
+  padding:14px 30px;
+  border-radius:24px;
+  border:none;
+  background:#ff7aa2;
+  color:white;
+  font-size:1rem;
 }
-
-@keyframes floatUp {
-  to {
-    transform: translateY(-120vh) scale(1.6);
-    opacity: 0;
-  }
+input{
+  width:90%;
+  padding:12px;
+  margin-top:12px;
+  border-radius:16px;
+  border:2px solid #ffd1e3;
+  font-size:1rem;
+}
+.heart{
+  position:fixed;
+  bottom:-30px;
+  font-size:22px;
+  animation:floatUp 4s linear forwards;
+}
+@keyframes floatUp{
+  to{transform:translateY(-120vh) scale(2);opacity:0}
+}
+.spark{
+  position:fixed;
+  width:8px;
+  height:8px;
+  background:#ff8fb1;
+  border-radius:50%;
+  animation:spark 1s ease-out forwards;
+}
+@keyframes spark{
+  to{transform:scale(5);opacity:0}
 }
 </style>
 </head>
 
 <body>
 
-<!-- เพลง (เริ่มเล่นตอนกดครั้งแรก) -->
-<audio id="music" loop>
+<audio id="bgm" loop>
   <source src="รักมากนะ (1).mp3" type="audio/mpeg">
 </audio>
 
 <div class="card">
-  <!-- รูป -->
-  <img src="file_00000004dc072078dd50d9991ff086f.png">
-
+  <img src="00000004dc072078dd50d9991ff086f.png">
   <div class="text" id="text">
-    กดตรงนี้สิ… เขามีอะไรจะบอก 💕
+    กดครั้งแรกนะที่รัก… เขาตั้งใจทำสิ่งนี้เพื่อมิ้น 💖
   </div>
-
-  <button onclick="next()">กดเลย 💖</button>
+  <div id="extra"></div>
+  <button onclick="next()">กดต่อไป 💕</button>
 </div>
 
 <script>
-const msgs = [
-  "ตั้งแต่มีเธอ เขารู้สึกว่าโลกนี้อ่อนโยนขึ้นมากเลย",
-  "2 เดือนอาจไม่เยอะ แต่ความรักที่มีให้เธอ… เยอะมากนะ",
-  "เธอคือรอยยิ้มในวันที่เขาเหนื่อยที่สุด",
-  "เขาอาจกวน อาจดื้อ แต่รักเธอจริง ๆ นะ",
-  "ขอบคุณที่อยู่ ขอบคุณที่เข้าใจ",
-  "สุขสันต์ครบรอบ 2 เดือนนะ… ที่รักของเขา 💖",
-  "รักมากนะ ❤️ จากเขา"
+const texts=[
+"ตั้งแต่วันที่มิ้นเดินเข้ามาในชีวิตเขา ทุกอย่างก็เปลี่ยนไป",
+"เขาเริ่มตื่นมาแล้วมีรอยยิ้ม โดยไม่รู้ตัว",
+"แค่ชื่อของมิ้น ก็ทำให้วันธรรมดากลายเป็นวันที่ดี",
+"เขาไม่เคยคิดว่าความรักจะดูเรียบง่ายแต่ลึกขนาดนี้",
+"2 เดือนอาจสั้นสำหรับบางคน แต่สำหรับเขา มันคือทุกวัน",
+"ทุกข้อความจากที่รัก เขาอ่านซ้ำมากกว่าหนึ่งรอบ",
+"ทุกเสียงหัวเราะของมิ้น ทำให้เขาอยากรักษามันไว้",
+"บางทีเขาก็กวนเหมือนหมาเด็ก 🐶",
+"แต่หมาเด็กตัวนี้ รักมิ้นจริง ๆ นะ",
+"เขาชอบเวลาที่มิ้นเรียกเขาว่าตะเอง",
+"มันทำให้โลกดูอบอุ่นขึ้นอย่างประหลาด",
+"ขอบคุณที่อยู่ข้างเขา แม้ในวันที่เขาไม่เก่งอะไรเลย",
+"ขอบคุณที่อดทนกับความงี่เง่าของเขา",
+"ขอบคุณที่ยังจับมือเขาไว้",
+"เขาอาจไม่ใช่คนสมบูรณ์แบบ",
+"แต่เขาจะรักมิ้นแบบไม่แบ่งให้ใคร",
+"ทุกครั้งที่มิ้นเหนื่อย เขาอยากเป็นที่พัก",
+"ทุกครั้งที่มิ้นยิ้ม เขาจะยิ้มตาม",
+"เขาอยากให้ที่รักรู้ว่า…",
+"การมีมิ้นอยู่ในชีวิต คือของขวัญที่ดีที่สุด",
+"เขาไม่รู้อนาคตจะไกลแค่ไหน",
+"แต่เขาอยากเดินไปพร้อมมิ้น",
+"ช้า ๆ ก็ได้ ขอแค่ไปด้วยกัน",
+"ถ้าวันไหนมิ้นท้อ",
+"ขอให้จำไว้ว่ายังมีเขาอยู่ตรงนี้",
+"หมาเด็กคนนี้จะไม่หายไปไหน",
+"ต่อให้ทะเลาะ ต่อให้งอน",
+"เขาก็ยังเลือกมิ้นเหมือนเดิม",
+"สุขสันต์วันครบรอบ 2 เดือนนะ",
+"ที่รักของเขา 💖",
+"และนี่คือสิ่งสุดท้าย…",
+"เขาอยากฟังคำตอบจากมิ้นจริง ๆ"
 ];
 
-let i = 0;
-let started = false;
-
-function next() {
-  // เริ่มเพลงเมื่อกดครั้งแรก
-  if (!started) {
-    document.getElementById("music").play();
-    started = true;
-  }
-
-  if (i >= msgs.length) return;
-
-  document.getElementById("text").innerHTML = "รอแป๊บนึงนะ 💗";
-
-  setTimeout(() => {
-    document.getElementById("text").innerHTML = msgs[i];
-    i++;
-    hearts();
-  }, 1000); // ดีเลย์ 1 วิ (เร็วขึ้น)
+// เติมข้อความอัตโนมัติให้ครบ 92
+while(texts.length<92){
+  texts.push("เขารักมิ้นมากขึ้นทุกวินาทีที่เพลงนี้ยังเล่นอยู่ 💗");
 }
 
-function hearts() {
-  for (let j = 0; j < 6; j++) {
-    const h = document.createElement("div");
-    h.className = "heart";
-    h.innerHTML = "💗";
-    h.style.left = Math.random() * 100 + "vw";
-    document.body.appendChild(h);
-    setTimeout(() => h.remove(), 3500);
+let step=0;
+let started=false;
+
+function next(){
+  if(!started){
+    document.getElementById("bgm").play();
+    started=true;
   }
+
+  if(step<texts.length){
+    document.getElementById("text").innerHTML="<span class='wait'>รอ 3 วิ นะที่รัก 💞</span>";
+    setTimeout(()=>{
+      document.getElementById("text").innerHTML=texts[step];
+      effects();
+      step++;
+      document.body.style.background=
+        `linear-gradient(135deg,
+        hsl(${Math.random()*360},80%,92%),
+        hsl(${Math.random()*360},80%,88%))`;
+    },3000);
+  }else{
+    showQuestions();
+  }
+}
+
+function effects(){
+  for(let i=0;i<14;i++){
+    const h=document.createElement("div");
+    h.className="heart";
+    h.innerHTML="💖";
+    h.style.left=Math.random()*100+"vw";
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),4000);
+  }
+}
+
+function showQuestions(){
+  document.getElementById("text").innerHTML="ตอบเขาหน่อยนะ ที่รัก 💌";
+  document.getElementById("extra").innerHTML=`
+    <input id="q1" placeholder="1️⃣ รู้สึกยังไงกับเขา">
+    <input id="q2" placeholder="2️⃣ ชอบเขาตอนไหนที่สุด">
+    <input id="q3" placeholder="3️⃣ อยากบอกอะไรเขา">
+    <button onclick="sendLine()">ส่งให้เขาใน LINE 💚</button>
+  `;
+}
+
+function sendLine(){
+  const msg=
+`คำตอบจากที่รัก 💖
+
+1️⃣ ${q1.value}
+2️⃣ ${q2.value}
+3️⃣ ${q3.value}
+
+จากมิ้น ถึงเบิร์ด`;
+
+  window.location.href=
+    "https://line.me/R/msg/text/?"+encodeURIComponent(msg);
 }
 </script>
 
