Update styles and text content in index.html

--- a/index.html
+++ b/index.html
@@ -3,81 +3,90 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ถึงที่รักของเขา 💖</title>
+<title>ถึงที่รักของเขา 🤍</title>
 
 <style>
 *{box-sizing:border-box}
 body{
   margin:0;
   height:100vh;
-  background:linear-gradient(135deg,#ffe6f0,#ffd6e8);
+  background:radial-gradient(circle at top,#ffeaf3,#ffd6e8);
   display:flex;
   justify-content:center;
   align-items:center;
   font-family:'Segoe UI',sans-serif;
   overflow:hidden;
-  transition:background 1.5s;
+  transition:background 2s;
 }
 .card{
   background:white;
-  width:94%;
+  width:95%;
   max-width:420px;
   padding:28px;
-  border-radius:34px;
+  border-radius:36px;
   text-align:center;
-  box-shadow:0 30px 60px rgba(0,0,0,.2);
+  box-shadow:0 40px 80px rgba(255,120,170,.35);
+  animation:fadeIn 1.2s ease;
 }
+@keyframes fadeIn{from{opacity:0;transform:scale(.9)}}
+
 img{
   width:88%;
-  border-radius:26px;
+  border-radius:30px;
   margin-bottom:18px;
+  box-shadow:0 20px 40px rgba(255,120,170,.35);
 }
 .text{
   font-size:1.22rem;
+  line-height:1.85;
   color:#ff4f86;
-  line-height:1.8;
-  min-height:160px;
+  min-height:170px;
+  animation:textPop .6s ease;
 }
-.wait{
-  opacity:.5;
-  font-size:.95rem;
-}
+@keyframes textPop{from{opacity:0;transform:translateY(8px)}}
+
+.wait{opacity:.55;font-size:.95rem}
+
 button{
   margin-top:18px;
-  padding:14px 30px;
-  border-radius:24px;
+  padding:14px 34px;
+  border-radius:30px;
   border:none;
-  background:#ff7aa2;
+  background:linear-gradient(135deg,#ff7aa2,#ff4f86);
   color:white;
   font-size:1rem;
+  box-shadow:0 10px 30px rgba(255,90,140,.45);
 }
+
 input{
   width:90%;
   padding:12px;
   margin-top:12px;
-  border-radius:16px;
+  border-radius:18px;
   border:2px solid #ffd1e3;
   font-size:1rem;
 }
+
 .heart{
   position:fixed;
-  bottom:-30px;
+  bottom:-40px;
   font-size:22px;
-  animation:floatUp 4s linear forwards;
+  animation:floatUp 4.5s linear forwards;
 }
 @keyframes floatUp{
   to{transform:translateY(-120vh) scale(2);opacity:0}
 }
+
 .spark{
   position:fixed;
-  width:8px;
-  height:8px;
-  background:#ff8fb1;
+  width:10px;
+  height:10px;
+  background:#ff9fc2;
   border-radius:50%;
-  animation:spark 1s ease-out forwards;
+  animation:spark 1.2s ease-out forwards;
 }
 @keyframes spark{
-  to{transform:scale(5);opacity:0}
+  to{transform:scale(6);opacity:0}
 }
 </style>
 </head>
@@ -89,57 +98,55 @@ input{
 </audio>
 
 <div class="card">
-  <img src="00000004dc072078dd50d9991ff086f.png">
+  <img src="รักมิ้น.png" alt="ที่รักของเขา">
   <div class="text" id="text">
-    กดครั้งแรกนะที่รัก… เขาตั้งใจทำสิ่งนี้เพื่อมิ้น 💖
+    กดครั้งแรกนะ… เขาอยากพามิ้นค่อย ๆ อ่านไปพร้อมเพลงนี้ 🤍
   </div>
   <div id="extra"></div>
-  <button onclick="next()">กดต่อไป 💕</button>
+  <button onclick="next()">กดเบา ๆ 💗</button>
 </div>
 
 <script>
-const texts=[
-"ตั้งแต่วันที่มิ้นเดินเข้ามาในชีวิตเขา ทุกอย่างก็เปลี่ยนไป",
-"เขาเริ่มตื่นมาแล้วมีรอยยิ้ม โดยไม่รู้ตัว",
-"แค่ชื่อของมิ้น ก็ทำให้วันธรรมดากลายเป็นวันที่ดี",
-"เขาไม่เคยคิดว่าความรักจะดูเรียบง่ายแต่ลึกขนาดนี้",
-"2 เดือนอาจสั้นสำหรับบางคน แต่สำหรับเขา มันคือทุกวัน",
-"ทุกข้อความจากที่รัก เขาอ่านซ้ำมากกว่าหนึ่งรอบ",
-"ทุกเสียงหัวเราะของมิ้น ทำให้เขาอยากรักษามันไว้",
-"บางทีเขาก็กวนเหมือนหมาเด็ก 🐶",
-"แต่หมาเด็กตัวนี้ รักมิ้นจริง ๆ นะ",
-"เขาชอบเวลาที่มิ้นเรียกเขาว่าตะเอง",
-"มันทำให้โลกดูอบอุ่นขึ้นอย่างประหลาด",
-"ขอบคุณที่อยู่ข้างเขา แม้ในวันที่เขาไม่เก่งอะไรเลย",
-"ขอบคุณที่อดทนกับความงี่เง่าของเขา",
-"ขอบคุณที่ยังจับมือเขาไว้",
-"เขาอาจไม่ใช่คนสมบูรณ์แบบ",
-"แต่เขาจะรักมิ้นแบบไม่แบ่งให้ใคร",
-"ทุกครั้งที่มิ้นเหนื่อย เขาอยากเป็นที่พัก",
-"ทุกครั้งที่มิ้นยิ้ม เขาจะยิ้มตาม",
-"เขาอยากให้ที่รักรู้ว่า…",
-"การมีมิ้นอยู่ในชีวิต คือของขวัญที่ดีที่สุด",
-"เขาไม่รู้อนาคตจะไกลแค่ไหน",
-"แต่เขาอยากเดินไปพร้อมมิ้น",
-"ช้า ๆ ก็ได้ ขอแค่ไปด้วยกัน",
-"ถ้าวันไหนมิ้นท้อ",
-"ขอให้จำไว้ว่ายังมีเขาอยู่ตรงนี้",
-"หมาเด็กคนนี้จะไม่หายไปไหน",
-"ต่อให้ทะเลาะ ต่อให้งอน",
-"เขาก็ยังเลือกมิ้นเหมือนเดิม",
-"สุขสันต์วันครบรอบ 2 เดือนนะ",
-"ที่รักของเขา 💖",
-"และนี่คือสิ่งสุดท้าย…",
-"เขาอยากฟังคำตอบจากมิ้นจริง ๆ"
+const texts = [
+"เขาไม่เคยคิดเลยว่าแค่รอยยิ้มของใครคนหนึ่ง จะเปลี่ยนโลกได้ขนาดนี้",
+"ตั้งแต่มีมิ้นอยู่ในชีวิต ทุกวันของเขามีเหตุผลให้ตื่นขึ้นมา",
+"บางวันไม่ได้พิเศษ แต่แค่มีมิ้น… มันก็พิเศษแล้ว",
+"เขาชอบเวลาที่มิ้นเรียกเขาว่าตะเอง มันทำให้ใจเขานุ่มทุกครั้ง",
+"หมาเด็กตัวนี้อาจกวน อาจซน แต่รักจริงไม่แบ่งให้ใคร",
+"สองเดือนที่ผ่านมา ไม่ใช่แค่เวลาที่เดินไป",
+"แต่มันคือความรู้สึกที่ค่อย ๆ โตขึ้นทุกวัน",
+"เขาเริ่มห่วง เริ่มคิดถึง โดยไม่ต้องมีเหตุผล",
+"บางทีแค่เห็นชื่อมิ้นบนจอ เขาก็ยิ้มแล้ว",
+"เขาไม่ได้เก่งเรื่องคำหวาน",
+"แต่ทุกอย่างที่ทำ… มาจากใจจริง",
+"เขาอยากเป็นที่สบายใจในวันที่มิ้นเหนื่อย",
+"อยากเป็นเสียงหัวเราะในวันที่มิ้นเครียด",
+"อยากเป็นคนแรกที่มิ้นคิดถึงตอนตื่น",
+"และเป็นคนสุดท้ายที่มิ้นนึกถึงก่อนนอน",
+"เขาไม่รู้อนาคตจะเป็นยังไง",
+"แต่เขารู้ว่าตอนนี้… เขาเลือกมิ้น",
+"เลือกที่จะดูแล เลือกที่จะรัก",
+"เลือกที่จะไม่ไปไหน",
+"ถ้าวันไหนเขางอแง ขอให้รู้ว่ามันเพราะรักมาก",
+"ถ้าวันไหนเขากวน ขอให้รู้ว่ามันเพราะสบายใจ",
+"มิ้นคือพื้นที่ปลอดภัยของเขา",
+"คือคำว่าบ้านในความหมายที่อบอุ่น",
+"เขาดีใจที่ได้คบกับมิ้น",
+"ดีใจที่ได้รัก",
+"และดีใจที่ได้ใช้คำว่าเรา",
+"สุขสันต์ครบรอบ 2 เดือนนะ",
+"ที่รักของเขา 🤍",
+"ก่อนจบเพลงนี้… เขาอยากฟังเสียงจากมิ้นบ้าง"
 ];
 
-// เติมข้อความอัตโนมัติให้ครบ 92
-while(texts.length<92){
-  texts.push("เขารักมิ้นมากขึ้นทุกวินาทีที่เพลงนี้ยังเล่นอยู่ 💗");
+// เติมจนใกล้จบเพลง (ประมาณ 90 คลิก)
+while(texts.length < 90){
+  texts.splice(texts.length-1,0,
+    "เขารู้ตัวอีกที… หัวใจก็ผูกกับมิ้นไปแล้ว 💞"
+  );
 }
 
-let step=0;
-let started=false;
+let i=0, started=false;
 
 function next(){
   if(!started){
@@ -147,55 +154,65 @@ function next(){
     started=true;
   }
 
-  if(step<texts.length){
-    document.getElementById("text").innerHTML="<span class='wait'>รอ 3 วิ นะที่รัก 💞</span>";
+  if(i < texts.length){
+    document.getElementById("text").innerHTML =
+      "<span class='wait'>รอ 3 วินาทีนะ… 💗</span>";
     setTimeout(()=>{
-      document.getElementById("text").innerHTML=texts[step];
+      document.getElementById("text").innerHTML = texts[i];
       effects();
-      step++;
-      document.body.style.background=
-        `linear-gradient(135deg,
-        hsl(${Math.random()*360},80%,92%),
+      i++;
+      document.body.style.background =
+        `radial-gradient(circle at top,
+        hsl(${Math.random()*360},85%,95%),
         hsl(${Math.random()*360},80%,88%))`;
     },3000);
-  }else{
+  } else {
     showQuestions();
   }
 }
 
 function effects(){
-  for(let i=0;i<14;i++){
-    const h=document.createElement("div");
-    h.className="heart";
-    h.innerHTML="💖";
-    h.style.left=Math.random()*100+"vw";
-    document.body.appendChild(h);
-    setTimeout(()=>h.remove(),4000);
+  for(let h=0;h<12;h++){
+    const e=document.createElement("div");
+    e.className="heart";
+    e.innerHTML="💖";
+    e.style.left=Math.random()*100+"vw";
+    document.body.appendChild(e);
+    setTimeout(()=>e.remove(),4500);
+  }
+  for(let s=0;s<6;s++){
+    const sp=document.createElement("div");
+    sp.className="spark";
+    sp.style.left=Math.random()*100+"vw";
+    sp.style.top=Math.random()*100+"vh";
+    document.body.appendChild(sp);
+    setTimeout(()=>sp.remove(),1200);
   }
 }
 
 function showQuestions(){
-  document.getElementById("text").innerHTML="ตอบเขาหน่อยนะ ที่รัก 💌";
-  document.getElementById("extra").innerHTML=`
-    <input id="q1" placeholder="1️⃣ รู้สึกยังไงกับเขา">
-    <input id="q2" placeholder="2️⃣ ชอบเขาตอนไหนที่สุด">
-    <input id="q3" placeholder="3️⃣ อยากบอกอะไรเขา">
+  document.getElementById("text").innerHTML =
+    "ตอบเขาหน่อยนะ… คำตอบของมิ้นสำคัญกับเขามาก 🤍";
+  document.getElementById("extra").innerHTML = `
+    <input id="q1" placeholder="รู้สึกยังไงกับเขา">
+    <input id="q2" placeholder="ช่วงไหนที่รู้สึกรักเขาที่สุด">
+    <input id="q3" placeholder="อยากบอกอะไรเขาในวันครบรอบ">
     <button onclick="sendLine()">ส่งให้เขาใน LINE 💚</button>
   `;
 }
 
 function sendLine(){
-  const msg=
-`คำตอบจากที่รัก 💖
+  const msg =
+`จากหัวใจของมิ้น 🤍
 
 1️⃣ ${q1.value}
 2️⃣ ${q2.value}
 3️⃣ ${q3.value}
 
-จากมิ้น ถึงเบิร์ด`;
+ถึงหมาเด็กของมิ้น 🐶`;
 
-  window.location.href=
-    "https://line.me/R/msg/text/?"+encodeURIComponent(msg);
+  window.location.href =
+    "https://line.me/R/msg/text/?" + encodeURIComponent(msg);
 }
 </script>
 
